cluster/apps/default/radarr/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name radarr
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.${SECRET_DOMAIN}`)
      priority: 99
      middlewares:
        - name: headers
          namespace: default
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 7878
          namespace: default
    - kind: Rule
      match: Host(`sonarr.$DOMAINNAME`) && (Headers(`X-Api-Key`, `$RADARR_API_KEY`) || Query(`apikey`, `$RADARR_API_KEY`))
      priority: 100      
      middlewares:
        - name: headers
          namespace: default
      services:
        - name: *name
          port: 7878
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
